package design.behavioral.behavior;

public interface FlyBehavior {
    public String fly();
}
