package design.behavioral.behavior;

public interface QuackBehavior {
    public String quack();
}
